@@ -1,3 +1,11 @@
+2012-05-03  Martin Jambor  <mjambor@suse.cz>
+
+	Backport from mainline
+	2012-05-02  Martin Jambor  <mjambor@suse.cz>
+
+	PR lto/52605
+	* g++.dg/lto/pr52605_0.C: New test.
+
 2012-05-03  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/53186
